# FastAPI-blog

./: .gitignore  README.md  alembic.ini  qodana.yaml  requirements.txt
blog/: .dockerignore  Dockerfile  celery_app.py  config.py  db_connection.py  dependencies.py  env.sample  main.py  pyproject.toml  requirements.txt  setup.cfg
blog/accounts/: crud.py  models.py  router.py  schemas.py  security.py  tasks.py  utils.py
blog/accounts/auth/: router.py  schemas.py
blog/alembic/: env.py
blog/alembic/versions/: 1ecb360f87da_alter_post_table_rename_tag_to_tags_and_.py  31ca0e5ddb61_alter_table_user_add_gender_column_.py  46d3ec488cb5_alter_user_table_added_unique_parameter_.py  62818de011e2_alter_table_users_add_columns_image_and_.py  aba9728e079c_alter_table_users_alter_column_is_.py  ae0adc1b7852_alter_table_comment_added_post_id_fk.py  b183c1fd2c1a_add_post_and_category_models.py  b66ce1fd1d33_add_a_column_role.py  c03e1b46d0b1_alter_tables_likes_dislikes_drop_column_.py  dd6883c276e7_create_users_table.py
blog/common/: crud_operations.py  security.py  send_email.py  tasks.py  utils.py
blog/config_files/: celeryconfig.py
blog/kubernetes/configs/: celery_worker_flower_config.yaml  nginx_config.yaml  postgres_standby_config.yaml  postgres_standby_init.yaml  redis_config.yaml
blog/kubernetes/deployments/: deployment_app.yaml  deployment_celery.yaml  deployment_nginx.yaml  deployment_postgres.yaml  deployment_redis.yaml
blog/kubernetes/ingress/: ingress_dashboard.yaml  ingress_nginx.yaml
blog/kubernetes/sensetive/: secrets_app.yaml  secrets_postgres.yaml
blog/kubernetes/services/: service_app.yaml  service_postgres.yaml
blog/kubernetes/statefulset/: stateful_postgres.yaml  stateful_postgres_primary.yaml  stateful_postgres_standby.yaml
blog/kubernetes/volumes/: volume_app_claim.yaml  volume_postgres.yaml  volume_postgres_claim.yaml  volume_redis.yaml  volume_redis_claim.yaml  volumes_app.yaml
blog/loggers/: logs_config.py
blog/migrations/: env.py
blog/migrations/versions/: 10cca17755bc_alter_table_comment_category_post_added_.py  46d3ec488cb5_alter_user_table_added_unique_parameter_.py  4b65546e1ace_alter_table_post_alter_column_tags_.py  6c3a2a2ea353_added_comment_table_with_association_.py  997324058009_alter_a_column_role_added_default_and_.py  a247b82d042e_alter_table_users_add_field_social_.py  c1e28ea2155c_alter_table_comments_added_fields_.py  cd4877bdf613_alter_table_users_add_columns_last_.py  dd6883c276e7_create_users_table.py  e854914ad7c9_alter_tables_comment_likes_table_.py
blog/posts/: crud.py  models.py  router.py  schemas.py  utils.py
blog/proxy/: Dockerfile  nginx_ssl.conf.template  run.sh
blog/routers/: posts_router.py  users.py  users_router.py
blog/settings/: development_dirs.py  env_dirs.py  production_dirs.py
blog/templates/email/: account_activation_email.html  account_activation_email.txt  (+2 more)
blog/tests/: config_test.py  conftest.py  fixtures.py  test_auth_api.py  test_email_sender.py  test_posts_api.py  test_security.py  test_users_api.py  test_utils.py
(+2 files in other folders)
